Home.css
* {
  margin: 0;
  padding: 0;
}

html {
  font-size: 18px;
}

body {
  font-family: 'Poppins', sans-serif;
  overflow-y: scroll;
  overflow-x: hidden;
}

#name {
  font-size: 2rem;
  font-weight: bolder;
  line-height: 1;
}

.container {
  min-width: 100%;
}

.headerSection {
  position: fixed;
  z-index: 1;
  width: 100%;
  background-color: #f1f1f1;
  padding: 20px 10px;
}

.headerSection li {
  float: left;
  color: black;
  text-align: center;
  padding: 12px;
  text-decoration: none;
  font-size: 18px;
  line-height: 20px;
  border-radius: 4px;
  list-style-type: none;
}

.gotos {
  float: right;
  margin-right: 2%;
}

.items {
  transition: all .5s;
}

.items:hover {
  transform: scale(1.5);
}

.items:active {
  transform: scale(.5);
}

.item-image {
  height: 40px;
}

.heroSection {
  position: relative;
}

.sparky {
  width: 100%;
  min-height: 100%;
  opacity: 0.9;
  margin-top: 87px;
}

.hamburger {
  display: none;
}

.heroText {
  display: inline-block;
  position: absolute;
  top: 10rem;
  left: 5rem;
  width: 30%;
  text-align: center;
  font-size: 1.5rem;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  padding: 40px 10px;
}

.definition {
  font-style: italic;
}

.language {
  font-style: normal;
  background-color: rgba(211, 211, 211, 0.7)
}

.crossedout {
  text-decoration: line-through;
  text-decoration-color: black;
}

.aboutmeSection {
  display: flex;
  flex-direction: column;
  margin: 7px 0;
  color: black;
  text-align: center;
  padding: 150px;
  font-weight: lighter;
}

.aboutmeSection h1 .text {
  text-align: center;
}

.aboutme-text {
  font-size: 1.25rem;
}

.sectionHeader {
  text-align: center;
  font-size: 2rem;
}

.sectionHeader-projects {
  margin: 5%;
  font-size: 2.5rem;
}

.experience {
  display: flex;
  overflow-x: scroll;
  align-items: center;
  justify-content: center;
  /* width: 100%; */
}

.experienceBox {
  display: flex;
  justify-content: center;
}

.imgContainer {
  display: inline-block;
  /* width: 30%; */
}

.imgExperience {
  width: 100%;
  height: auto;
}

.testimonial {
  width: 20%;
  border-left: 1px solid black;
  padding: 2%;
  line-height: 2rem;
}

.testimonialText {
  font-weight: lighter;
}

.projectSection {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: darkgrey;
  /* padding: 150px; */
}

.project-row {}

.project-title {
  text-align: center;
  font-size: 2rem;
  text-decoration: underline;
}

.project-leftSide {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: auto;
  overflow: hidden;
}

.project-rightSide {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: 2%;
  font-weight: lighter;
}

.project-description {
  width: 60%;
  text-align: center;
  margin-bottom: 2%;
  font-size: 20px;
}

.codeBtn {
  padding: 20px;
  border: 1px solid;
  background-color: red;
  color: white;
  border-radius: 15px;
  text-transform: uppercase;
  font-size: 25px;
}

.android {
  width: 20%;
}

.gif {
  width: 50%;
  height: 10%;
}

.mobile-gif {
  width: 20%;
  height: auto;
}

.footerSection {
  background-color: rgb(0, 0, 0);
  position: unset;
  padding: 70px 0;
}

.footerSection li {
  color: white;
}

.footerSection .medium {
  background-color: white;
}

/* The dots/bullets/indicators */

.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

.slideshow-container {
  min-width: 100%;
  position: relative;
  margin: auto;
}

/* Next & previous buttons */

.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 16px;
  margin-top: -22px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */

.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */

.prev:hover, .next:hover {
  background-color: rgba(0, 0, 0, 0.8);
}

/* Fading animation */

.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {
    opacity: .4
  }
  to {
    opacity: 1
  }
}

@keyframes fade {
  from {
    opacity: .4
  }
  to {
    opacity: 1
  }
}

@media only screen and (min-width: 375px) and (max-width: 1220px) {
  .heroSection {
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content: center;
    width: 100%;
  }
  .heroText {
    position: static;
    justify-content: center;
    align-self: center;
    border-radius: 5px;
    margin-top: 50px;
    width: 70%;
    text-align: center;
    font-size: 1.5rem;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 0;
  }
  .gotos {
    display: none;
  }
  .hamburger {
    display: inline-block;
    position: relative;
    background-color: #ededed;
  }
  .bar1, .bar2, .bar3 {
    width: 35px;
    height: 5px;
    background-color: rgb(148, 11, 11);
    margin: 6px 0;
    transition: 0.4s;
    z-index: 2;
  }
  /* Rotate first bar */
  .change .bar1 {
    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
    transform: rotate(-45deg) translate(-9px, 6px);
  }
  /* Fade out the second bar */
  .change .bar2 {
    opacity: 0;
  }
  /* Rotate last bar */
  .change .bar3 {
    -webkit-transform: rotate(45deg) translate(-8px, -8px);
    transform: rotate(45deg) translate(-8px, -8px);
  }
  .change .menu {
    position: absolute;
    display: flex;
    justify-content: left;
    background-color: #ededed;
    width: 300px;
    margin: 0 0 0 -310px;
    height: auto;
    transform-origin: 0% 0%;
    transform: translate(100%, 0);
    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
    z-index: 3;
  }
  .change ul {
    transform: none;
    display: flex;
    flex-direction: column;
    align-content: center;
  }
  .change .menu ul li {
    display: flex;
    justify-content: center;
    margin-left: 50%;
  }
  .hamburger-text {
    display: flex;
    align-items: center;
    margin-left: 15px;
  }
  .humburger-text:active {
    color: red;
  }
  .aboutmeSection {
    padding: 100px;
  }
  .project-row {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 5%;
    height: 100%;
    box-shadow: none;
    border: none;
    padding: 10px;
    border-radius: 0;
  }
  .project-leftSide {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: auto;
    overflow: hidden;
  }
  .project-rightSide {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: auto;
    margin-left: 0;
    margin-top: 20px;
    font-size: 1.25rem;
  }
  .codeBtn {
    font-weight: 700;
  }
  .headerSection {
    padding: 25px 10px;
  }
  .footerSection {
    padding: 70px 0;
  }
  .footerSection #name {
    display: block;
    text-align: center;
    width: 100%;
  }
  #name {
    display: none;
  }
  body {
    font-size: 20px;
    font-weight: 500px;
  }
  .prev, .next {
    font-size: 11px;
  }
}

/* this media query is for when the user is in mobile phone view */

@media only screen and (min-width: 375px) and (max-width: 420px) {}

